load("//third_party/java:rules.bzl", "java_library")

CLIENT_JAVA_SRCS = [
    "AbstractTransport.java",
    "AreaOfInterest.java",
    "AreaOfInterestRequest.java",
    "AreaOfInterestService.java",
    "CacheEntry.java",
    "CacheService.java",
    "ChannelAddress.java",
    "ChannelChangeDescriptor.java",
    "ChannelLinkSchema.java",
    "ChannelSchema.java",
    "CollectionsUtil.java",
    "Connection.java",
    "Connector.java",
    "ConnectorEntry.java",
    "ConnectorState.java",
    "Converger.java",
    "Entity.java",
    "EntitySchema.java",
    "EntityService.java",
    "EntitySubscriptionEntry.java",
    "ExecRequest.java",
    "FilterUtil.java",
    "Function.java",
    "GwtIncompatible.java",
    "MessageResponse.java",
    "OnEntityUpdateAction.java",
    "PendingRequest.java",
    "Procedure.java",
    "RateLimitedValue.java",
    "Replicant.java",
    "ReplicantConfig.java",
    "ReplicantContext.java",
    "ReplicantContextHolder.java",
    "ReplicantLogger.java",
    "ReplicantRuntime.java",
    "ReplicantService.java",
    "ReplicantTestUtil.java",
    "ReplicantUtil.java",
    "ReplicantZoneHolder.java",
    "Request.java",
    "RequestEntry.java",
    "ResponseHandler.java",
    "RuntimeState.java",
    "SafeFunction.java",
    "SafeProcedure.java",
    "Scheduler.java",
    "SchemaService.java",
    "Spy.java",
    "SpyEventHandler.java",
    "SpyImpl.java",
    "Subscription.java",
    "SubscriptionService.java",
    "SubscriptionUpdateEntityFilter.java",
    "SubscriptionUtil.java",
    "SystemSchema.java",
    "Transport.java",
    "TransportContext.java",
    "TransportContextImpl.java",
    "Validator.java",
    "WebSocketConfig.java",
    "WebSocketTransport.java",
    "WebStorageCacheService.java",
    "Zone.java",
    "package-info.java",
    "messages/AbstractMessage.java",
    "messages/AuthTokenMessage.java",
    "messages/BulkSubscribeMessage.java",
    "messages/BulkUnsubscribeMessage.java",
    "messages/ChannelChange.java",
    "messages/ClientToServerMessage.java",
    "messages/EntityChange.java",
    "messages/EntityChangeData.java",
    "messages/ErrorMessage.java",
    "messages/EtagsData.java",
    "messages/EtagsMessage.java",
    "messages/ExecMessage.java",
    "messages/GwtIncompatible.java",
    "messages/OkMessage.java",
    "messages/PingMessage.java",
    "messages/ServerToClientMessage.java",
    "messages/SessionCreatedMessage.java",
    "messages/SubscribeMessage.java",
    "messages/UnsubscribeMessage.java",
    "messages/UpdateMessage.java",
    "messages/UseCacheMessage.java",
    "messages/package-info.java",
    "react4j/ReplicantSubscription.java",
    "spy/AreaOfInterestCreatedEvent.java",
    "spy/AreaOfInterestDisposedEvent.java",
    "spy/AreaOfInterestFilterUpdatedEvent.java",
    "spy/AreaOfInterestStatusUpdatedEvent.java",
    "spy/ConnectFailureEvent.java",
    "spy/ConnectedEvent.java",
    "spy/DataLoadStatus.java",
    "spy/DisconnectFailureEvent.java",
    "spy/DisconnectedEvent.java",
    "spy/ExecCompletedEvent.java",
    "spy/ExecRequestQueuedEvent.java",
    "spy/ExecStartedEvent.java",
    "spy/InSyncEvent.java",
    "spy/MessageProcessFailureEvent.java",
    "spy/MessageProcessedEvent.java",
    "spy/MessageReadFailureEvent.java",
    "spy/OutOfSyncEvent.java",
    "spy/RequestCompletedEvent.java",
    "spy/RequestStartedEvent.java",
    "spy/RestartEvent.java",
    "spy/SerializableEvent.java",
    "spy/SubscribeCompletedEvent.java",
    "spy/SubscribeRequestQueuedEvent.java",
    "spy/SubscribeStartedEvent.java",
    "spy/SubscriptionCreatedEvent.java",
    "spy/SubscriptionDisposedEvent.java",
    "spy/SubscriptionOrphanedEvent.java",
    "spy/SubscriptionUpdateCompletedEvent.java",
    "spy/SubscriptionUpdateRequestQueuedEvent.java",
    "spy/SubscriptionUpdateStartedEvent.java",
    "spy/SyncRequestEvent.java",
    "spy/UnsubscribeCompletedEvent.java",
    "spy/UnsubscribeRequestQueuedEvent.java",
    "spy/UnsubscribeStartedEvent.java",
    "spy/package-info.java",
    "spy/tools/AbstractSpyEventProcessor.java",
    "spy/tools/ConsoleSpyEventProcessor.java",
    "spy/tools/CssRules.java",
    "spy/tools/ReplicantSpyUtil.java",
]

CLIENT_RESOURCES = [
    "AbstractTransport.java",
    "AreaOfInterest.java",
    "AreaOfInterestRequest.java",
    "AreaOfInterestService.java",
    "CacheEntry.java",
    "CacheService.java",
    "ChannelAddress.java",
    "ChannelChangeDescriptor.java",
    "ChannelLinkSchema.java",
    "ChannelSchema.java",
    "CollectionsUtil.java",
    "Connection.java",
    "Connector.java",
    "ConnectorEntry.java",
    "ConnectorState.java",
    "Converger.java",
    "Entity.java",
    "EntitySchema.java",
    "EntityService.java",
    "EntitySubscriptionEntry.java",
    "ExecRequest.java",
    "FilterUtil.java",
    "Function.java",
    "GwtIncompatible.java",
    "MessageResponse.java",
    "OnEntityUpdateAction.java",
    "PendingRequest.java",
    "Procedure.java",
    "RateLimitedValue.java",
    "Replicant.gwt.xml",
    "Replicant.java",
    "ReplicantConfig.java",
    "ReplicantContext.java",
    "ReplicantContextHolder.java",
    "ReplicantDebug.gwt.xml",
    "ReplicantDev.gwt.xml",
    "ReplicantLogger.java",
    "ReplicantRuntime.java",
    "ReplicantService.java",
    "ReplicantTestUtil.java",
    "ReplicantUtil.java",
    "ReplicantZoneHolder.java",
    "Request.java",
    "RequestEntry.java",
    "ResponseHandler.java",
    "RuntimeState.java",
    "SafeFunction.java",
    "SafeProcedure.java",
    "Scheduler.java",
    "SchemaService.java",
    "Spy.java",
    "SpyEventHandler.java",
    "SpyImpl.java",
    "Subscription.java",
    "SubscriptionService.java",
    "SubscriptionUpdateEntityFilter.java",
    "SubscriptionUtil.java",
    "SystemSchema.java",
    "Transport.java",
    "TransportContext.java",
    "TransportContextImpl.java",
    "Validator.java",
    "WebSocketConfig.java",
    "WebSocketTransport.java",
    "WebStorageCacheService.java",
    "Zone.java",
    "package-info.java",
    "messages/AbstractMessage.java",
    "messages/AuthTokenMessage.java",
    "messages/BulkSubscribeMessage.java",
    "messages/BulkUnsubscribeMessage.java",
    "messages/ChannelChange.java",
    "messages/ClientToServerMessage.java",
    "messages/EntityChange.java",
    "messages/EntityChangeData.java",
    "messages/ErrorMessage.java",
    "messages/EtagsData.java",
    "messages/EtagsMessage.java",
    "messages/ExecMessage.java",
    "messages/GwtIncompatible.java",
    "messages/OkMessage.java",
    "messages/PingMessage.java",
    "messages/ServerToClientMessage.java",
    "messages/SessionCreatedMessage.java",
    "messages/SubscribeMessage.java",
    "messages/UnsubscribeMessage.java",
    "messages/UpdateMessage.java",
    "messages/UseCacheMessage.java",
    "messages/package-info.java",
    "react4j/React4j.gwt.xml",
    "react4j/ReplicantSubscription.java",
    "spy/AreaOfInterestCreatedEvent.java",
    "spy/AreaOfInterestDisposedEvent.java",
    "spy/AreaOfInterestFilterUpdatedEvent.java",
    "spy/AreaOfInterestStatusUpdatedEvent.java",
    "spy/ConnectFailureEvent.java",
    "spy/ConnectedEvent.java",
    "spy/DataLoadStatus.java",
    "spy/DisconnectFailureEvent.java",
    "spy/DisconnectedEvent.java",
    "spy/ExecCompletedEvent.java",
    "spy/ExecRequestQueuedEvent.java",
    "spy/ExecStartedEvent.java",
    "spy/InSyncEvent.java",
    "spy/MessageProcessFailureEvent.java",
    "spy/MessageProcessedEvent.java",
    "spy/MessageReadFailureEvent.java",
    "spy/OutOfSyncEvent.java",
    "spy/RequestCompletedEvent.java",
    "spy/RequestStartedEvent.java",
    "spy/RestartEvent.java",
    "spy/SerializableEvent.java",
    "spy/SubscribeCompletedEvent.java",
    "spy/SubscribeRequestQueuedEvent.java",
    "spy/SubscribeStartedEvent.java",
    "spy/SubscriptionCreatedEvent.java",
    "spy/SubscriptionDisposedEvent.java",
    "spy/SubscriptionOrphanedEvent.java",
    "spy/SubscriptionUpdateCompletedEvent.java",
    "spy/SubscriptionUpdateRequestQueuedEvent.java",
    "spy/SubscriptionUpdateStartedEvent.java",
    "spy/SyncRequestEvent.java",
    "spy/UnsubscribeCompletedEvent.java",
    "spy/UnsubscribeRequestQueuedEvent.java",
    "spy/UnsubscribeStartedEvent.java",
    "spy/package-info.java",
    "spy/tools/AbstractSpyEventProcessor.java",
    "spy/tools/ConsoleSpyEventProcessor.java",
    "spy/tools/CssRules.java",
    "spy/tools/ReplicantSpyUtil.java",
]

filegroup(
    name = "client_j2cl_srcs",
    srcs = CLIENT_JAVA_SRCS,
    visibility = ["//visibility:public"],
)

java_library(
    name = "client_lib",
    srcs = CLIENT_JAVA_SRCS,
    plugins = [
        "//third_party/java:arez_processor_plugin",
        "//third_party/java:grim_processor_plugin",
        "//third_party/java:react4j_processor_plugin",
    ],
    resource_strip_prefix = "client/src/main/java",
    resources = CLIENT_RESOURCES,
    visibility = ["//client:__pkg__"],
    deps = [
        "//shared:shared_lib",
        "//third_party/java:akasha_gwt",
        "//third_party/java:arez_core",
        "//third_party/java:base",
        "//third_party/java:braincheck_core",
        "//third_party/java:grim_annotations",
        "//third_party/java:gwt_user",
        "//third_party/java:javax_annotation",
        "//third_party/java:jsinterop_annotations",
        "//third_party/java:org_jetbrains_annotations",
        "//third_party/java:react4j_core",
        "//third_party/java:zemeckis_core",
    ],
)
